# blobs

./: local.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 3ds.cpp  3ds.h  CMakeLists.txt  gl_code.cpp  texture.cpp  texture.h
app/src/main/java/com/android/gl2jni/: GL2JNILib.java  GL2JNIView.java
app/src/main/res/raw/: model_bench.3ds  model_box.3ds  tuktuk.3ds
